<resources>
    <string name="app_name">graph</string>
    <string name="ke">Ke:</string>
    <string name="digite_o_ke">Digite o Ke</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="copiar">Copiar</string>
    <string name="kd">kd:</string>
    <string name="kd1">Kd:</string>
    <string name="digite_o_kd">Digite o kd</string>
    <string name="ki">Ki:</string>
    <string name="digite_o_ki">Digite o ki</string>
    <string name="rolar">Rolar</string>
    <string name="con">con:</string>
    <string name="aaa">Copiar para área de trasferencia</string>
    <string name="limpar">Limpar</string>
    <string name="config">Config</string>
    <string name="x">X</string>
    <string name="copiar_resultado">Copiar resultado</string>
    <string name="enviar_constantes">Enviar constantes</string>
    <string name="velocidade">Velocidade</string>
    <string name="velocidade1">Velocidade:</string>
    <string name="enviar_const" />
    <string name="enviar_consta">Enviar const</string>
    <string name="enviar_constaa">Enviar const</string>
    <string name="copiar_result">Copiar result</string>
    <string name="stop">stop</string>
    <string name="pare">Pare</string>
    <string name="cte">Cte:</string>
    <string name="Kp">kp</string>
    <string name="Kp1">Kp</string>
    <string name="ki1">Ki</string>
    <string name="kd2">Kd</string>
</resources>